--- a/platformics/codegen/templates/api/types/class_name.py.j2
+++ b/platformics/codegen/templates/api/types/class_name.py.j2
@@ -8,21 +8,26 @@ Make changes to the template codegen/templates/api/types/class_name.py.j2 instea
 # ruff: noqa: E501 Line too long
 
 import typing
-from typing import TYPE_CHECKING, Annotated, Optional, Sequence, Callable
+from typing import TYPE_CHECKING, Annotated, Any, Optional, Sequence, Callable
 
 import database.models as db
 import strawberry
 import datetime
-from api.core.helpers import get_db_rows
+from api.core.helpers import get_db_rows, get_aggregate_db_rows
 {%- if render_files %}
 from api.files import File, FileWhereClause
 {%- endif %}
 from api.types.entities import EntityInterface
+{%- for related_field in cls.related_fields %}
+    {%- if related_field.related_class.name not in ["File", "Entity"] and related_field.multivalued %}
+from api.types.{{related_field.related_class.snake_name}} import ({{related_field.related_class.name}}Aggregate, format_{{related_field.related_class.snake_name}}_aggregate_output)
+    {%- endif %}
+{%- endfor %}
 from cerbos.sdk.client import CerbosClient
 from cerbos.sdk.model import Principal, Resource
 from fastapi import Depends
 from platformics.api.core.deps import get_cerbos_client, get_db_session, require_auth_principal
-from platformics.api.core.gql_to_sql import EnumComparators, DatetimeComparators, IntComparators, FloatComparators, StrComparators, UUIDComparators, BoolComparators
+from platformics.api.core.gql_to_sql import aggregator_map, EnumComparators, DatetimeComparators, IntComparators, FloatComparators, StrComparators, UUIDComparators, BoolComparators
 from platformics.api.core.strawberry_extensions import DependencyExtension
 from platformics.security.authorization import CerbosAction, get_resource_query
 from sqlalchemy import inspect
@@ -30,6 +35,7 @@ from sqlalchemy.ext.asyncio import AsyncSession
 from strawberry import relay
 from strawberry.types import Info
 from typing_extensions import TypedDict
+import enum
 
 {%- for field in cls.enum_fields %}
     {%- if loop.first %}
@@ -95,6 +101,26 @@ async def load_{{ related_field.related_class.snake_name }}_rows(
     relationship = mapper.relationships["{{ related_field.name }}"]
     return await dataloader.loader_for(relationship, where).load(root.{{ related_field.name }}_id) # type:ignore
         {%- endif %}
+
+
+        {%- if related_field.multivalued %}
+@strawberry.field
+async def load_{{ related_field.related_class.snake_name }}_aggregate_rows(
+    root: "{{ cls.name }}",
+    info: Info,
+    where: Annotated["{{ related_field.type }}WhereClause", strawberry.lazy("api.types.{{ related_field.related_class.snake_name }}")] | None = None,
+) -> Optional[Annotated["{{ related_field.related_class.name }}Aggregate", strawberry.lazy("api.types.{{ related_field.related_class.snake_name }}")]]:
+    selections = info.selected_fields[0].selections[0].selections
+    dataloader = info.context["sqlalchemy_loader"]
+    mapper = inspect(db.{{ cls.name }})
+    relationship = mapper.relationships["{{ related_field.name }}"]
+    rows = await dataloader.aggregate_loader_for(relationship, where, selections).load(root.id)  # type:ignore
+    # Aggregate queries always return a single row, so just grab the first one
+    result = rows[0] if rows else None
+    aggregate_output = format_{{ related_field.related_class.snake_name }}_aggregate_output(result)
+    return {{ related_field.related_class.name }}Aggregate(aggregate=aggregate_output)
+        {%- endif %}
+
     {%- endif %}
 {%- endfor %}
 
@@ -208,6 +234,9 @@ class {{ cls.name }}(EntityInterface):
     {{ attr.name }}: Optional[Annotated["File", strawberry.lazy("api.files")]] = load_files_from("{{ attr.name }}")  # type: ignore
         {%- elif attr.inverse %}
     {{ attr.name }}: {{ "Sequence" if attr.multivalued else "Optional" }}[Annotated["{{ attr.type }}", strawberry.lazy("api.types.{{ attr.related_class.snake_name }}")]] = load_{{ attr.related_class.snake_name }}_rows  # type:ignore
+            {%- if attr.multivalued %}
+    {{ attr.name }}_aggregate : Optional[Annotated["{{ attr.related_class.name }}Aggregate", strawberry.lazy("api.types.{{ attr.related_class.snake_name }}")]] = load_{{ attr.related_class.snake_name }}_aggregate_rows  # type:ignore
+            {%- endif %}
         {%- endif %}
     {%- endfor %}
 
@@ -218,6 +247,81 @@ Strawberry type *or* a SQLAlchemy model instance as a valid response class from 
 {{ cls.name }}.__strawberry_definition__.is_type_of = (  # type: ignore
     lambda obj, info: type(obj) == db.{{ cls.name }} or type(obj) == {{ cls.name }}
 )
+
+"""
+------------------------------------------------------------------------------
+Aggregation types
+------------------------------------------------------------------------------
+"""
+
+"""
+Define columns that support numerical aggregations
+"""
+@strawberry.type
+class {{ cls.name }}NumericalColumns:
+    producing_run_id: Optional[int] = None
+    owner_user_id: Optional[int] = None
+    collection_id: Optional[int] = None
+    {%- for attr in cls.owned_fields %}
+        {%- if attr.type == "int" %}
+    {{ attr.name }}: {{ getType("int", False) }}
+        {%- elif attr.type == "float" %}
+    {{ attr.name }}: {{ getType("float", False) }}
+        {%- endif %}
+    {%- endfor %}
+
+"""
+Define columns that support min/max aggregations
+"""
+@strawberry.type
+class {{ cls.name }}MinMaxColumns:
+    producing_run_id: Optional[int] = None
+    owner_user_id: Optional[int] = None
+    collection_id: Optional[int] = None
+    {%- for attr in cls.owned_fields %}
+        {%- if attr.type == "int" %}
+    {{ attr.name }}: {{ getType("int", False) }}
+        {%- elif attr.type == "float" %}
+    {{ attr.name }}: {{ getType("float", False) }}
+        {%- elif attr.type == "string" %}
+    {{ attr.name }}: {{ getType("str", False) }}
+        {%- elif attr.type == "date" %}
+    {{ attr.name }}: {{ getType("datetime.datetime", False) }}
+        {%- endif %}
+    {%- endfor %}
+
+"""
+Define enum of all columns to support count and count(distinct) aggregations
+"""
+@strawberry.enum
+class {{ cls.name }}CountColumns(enum.Enum):
+    {%- for attr in cls.all_fields %}
+    {{ attr.name }} = "{{ attr.name }}"
+    {%- endfor %}
+
+"""
+All supported aggregation functions
+"""
+@strawberry.type
+class {{ cls.name }}AggregateFunctions:
+    # This is a hack to accept "distinct" and "columns" as arguments to "count"
+    @strawberry.field
+    def count(self, distinct: Optional[bool] = False, columns: Optional[{{ cls.name }}CountColumns] = None) -> Optional[int]:
+        # Count gets set with the proper value in the resolver, so we just return it here
+        return self.count
+    sum: Optional[{{ cls.name }}NumericalColumns] = None
+    avg: Optional[{{ cls.name }}NumericalColumns] = None
+    min: Optional[{{ cls.name }}MinMaxColumns] = None
+    max: Optional[{{ cls.name }}MinMaxColumns] = None
+    stddev: Optional[{{ cls.name }}NumericalColumns] = None
+    variance: Optional[{{ cls.name }}NumericalColumns] = None
+
+"""
+Wrapper around {{ cls.name }}AggregateFunctions
+"""
+@strawberry.type
+class {{ cls.name }}Aggregate:
+    aggregate: Optional[{{ cls.name }}AggregateFunctions] = None
 
 """
 ------------------------------------------------------------------------------
@@ -276,6 +380,47 @@ async def resolve_{{ cls.plural_snake_name }}(
     Resolve {{ cls.name }} objects. Used for queries (see api/queries.py).
     """
     return await get_db_rows(db.{{ cls.name }}, session, cerbos_client, principal, where, [])  # type: ignore
+
+
+def format_{{ cls.snake_name }}_aggregate_output(query_results: dict[str, Any]) -> {{ cls.name }}AggregateFunctions:
+    """
+    Given a row from the DB containing the results of an aggregate query,
+    format the results using the proper GraphQL types.
+    """
+    output = {{ cls.name }}AggregateFunctions()
+    for aggregate_name, value in query_results.items():
+        if aggregate_name == "count":
+            output.count = value
+        else:
+            aggregator_fn, col_name = aggregate_name.split("_", 1)
+            # Filter out the group_by key from the results if one was provided.
+            if aggregator_fn in aggregator_map.keys():
+                if not getattr(output, aggregator_fn):
+                    if aggregate_name in ["min", "max"]:
+                        setattr(output, aggregator_fn, {{ cls.name }}MinMaxColumns())
+                    else:
+                        setattr(output, aggregator_fn, {{ cls.name }}NumericalColumns())
+                setattr(getattr(output, aggregator_fn), col_name, value)
+    return output
+
+@strawberry.field(extensions=[DependencyExtension()])
+async def resolve_{{ cls.plural_snake_name }}_aggregate(
+    info: Info,
+    session: AsyncSession = Depends(get_db_session, use_cache=False),
+    cerbos_client: CerbosClient = Depends(get_cerbos_client),
+    principal: Principal = Depends(require_auth_principal),
+    where: Optional[{{ cls.name }}WhereClause] = None,
+) -> typing.Sequence[{{ cls.name }}]:
+    """
+    Aggregate values for {{ cls.name }} objects. Used for queries (see api/queries.py).
+    """
+    # Get the selected aggregate functions and columns to operate on
+    # TODO: not sure why selected_fields is a list
+    # The first list of selections will always be ["aggregate"], so just grab the first item
+    selections = info.selected_fields[0].selections[0].selections
+    rows = await get_aggregate_db_rows(db.{{ cls.name }}, session, cerbos_client, principal, where, selections, [])  # type: ignore
+    aggregate_output = format_{{ cls.snake_name }}_aggregate_output(rows)
+    return {{ cls.name }}Aggregate(aggregate=aggregate_output)
 
 @strawberry.mutation(extensions=[DependencyExtension()])
 async def create_{{ cls.snake_name }}(
