--- a/platformics/codegen/templates/api/types/class_name.py.j2
+++ b/platformics/codegen/templates/api/types/class_name.py.j2
@@ -29,6 +29,7 @@ from api.types.{{related_field.related_class.snake_name}} import ({{related_fiel
 from cerbos.sdk.client import CerbosClient
 from cerbos.sdk.model import Principal, Resource
 from fastapi import Depends
+from platformics.api.core.errors import PlatformicsException
 from platformics.api.core.deps import get_cerbos_client, get_db_session, require_auth_principal
 from platformics.api.core.gql_to_sql import aggregator_map, EnumComparators, DatetimeComparators, IntComparators, FloatComparators, StrComparators, UUIDComparators, BoolComparators
 from platformics.api.core.strawberry_extensions import DependencyExtension
@@ -443,7 +444,7 @@ async def create_{{ cls.snake_name }}(
     attr = {"collection_id": input.collection_id}
     resource = Resource(id="NEW_ID", kind=db.{{ cls.name }}.__tablename__, attr=attr)
     if not cerbos_client.is_allowed("create", principal, resource):
-        raise Exception("Unauthorized: Cannot create entity in this collection")
+        raise PlatformicsException("Unauthorized: Cannot create entity in this collection")
 
     # Save to DB
     params["owner_user_id"] = int(principal.id)
@@ -469,19 +470,19 @@ async def update_{{ cls.snake_name }}(
     # Need at least one thing to update
     num_params = len([x for x in params if params[x] is not None])
     if num_params == 0:
-        raise Exception("No fields to update")
+        raise PlatformicsException("No fields to update")
 
     # Fetch entities for update, if we have access to them
     entities = await get_db_rows(db.{{ cls.name }}, session, cerbos_client, principal, where, [], CerbosAction.UPDATE)
     if len(entities) == 0:
-        raise Exception("Unauthorized: Cannot update entities")
+        raise PlatformicsException("Unauthorized: Cannot update entities")
 
     # Validate that the user has access to the new collection ID
     if input.collection_id:
         attr = {"collection_id": input.collection_id}
         resource = Resource(id="SOME_ID", kind=db.{{ cls.name }}.__tablename__, attr=attr)
         if not cerbos_client.is_allowed(CerbosAction.UPDATE, principal, resource):
-            raise Exception("Unauthorized: Cannot access new collection")
+            raise PlatformicsException("Unauthorized: Cannot access new collection")
 
     # Update DB
     for entity in entities:
@@ -505,7 +506,7 @@ async def delete_{{ cls.snake_name }}(
     # Fetch entities for deletion, if we have access to them
     entities = await get_db_rows(db.{{ cls.name }}, session, cerbos_client, principal, where, [], CerbosAction.DELETE)
     if len(entities) == 0:
-        raise Exception("Unauthorized: Cannot delete entities")
+        raise PlatformicsException("Unauthorized: Cannot delete entities")
 
     # Update DB
     for entity in entities:
