Getting ready to stub in input validation via pydantic.

--- a/platformics/codegen/templates/api/types/class_name.py.j2
+++ b/platformics/codegen/templates/api/types/class_name.py.j2
@@ -17,6 +17,8 @@ import database.models as db
 import strawberry
 import datetime
 from platformics.api.core.helpers import get_db_rows, get_aggregate_db_rows
+from platformics.api.core.input_validation import validate_input
+from api.validators.{{cls.snake_name}} import {{cls.name}}CreateInputValidator, {{cls.name}}UpdateInputValidator
 {%- if render_files %}
 from api.files import File, FileWhereClause
 {%- endif %}
@@ -460,6 +462,7 @@ async def create_{{ cls.snake_name }}(
     Create a new {{ cls.name }} object. Used for mutations (see api/mutations.py).
     """
     params = input.__dict__
+    validate_input(input, {{cls.name}}CreateInputValidator)
 
     # Validate that the user can read all of the entities they're linking to.
     {%- if cls.system_only_create_fields %}
@@ -519,6 +522,7 @@ async def update_{{ cls.snake_name }}(
     Update {{ cls.name }} objects. Used for mutations (see api/mutations.py).
     """
     params = input.__dict__
+    validate_input(input, {{cls.name}}UpdateInputValidator)
     
     # Need at least one thing to update
     num_params = len([x for x in params if params[x] is not None])
