Update codegen to support 1:1 relationships

--- a/platformics/codegen/templates/database/models/class_name.py.j2
+++ b/platformics/codegen/templates/database/models/class_name.py.j2
@@ -68,7 +68,7 @@ class {{cls.name}}(Entity):
             {%- else %}
     {{attr.name}}_id: Mapped[uuid.UUID] = mapped_column(UUID, ForeignKey("{{attr.related_class.snake_name}}.{{attr.related_class.identifier}}"), nullable={{"False" if attr.required else "True"}}{%- if attr.identifier %}, primary_key=True{%- endif %})
               {%- if attr.type != "Entity" %}
-    {{attr.name}}: Mapped["{{attr.type}}"] = relationship("{{attr.type}}",{%- if attr.inverse %} back_populates="{{attr.inverse_field}}",{%- endif %} foreign_keys={{attr.name}}_id)
+    {{attr.name}}: Mapped["{{attr.type}}"] = relationship("{{attr.type}}",{%- if attr.inverse and attr.should_back_populate %} back_populates="{{attr.inverse_field}}",{%- endif %} foreign_keys={{attr.name}}_id)
               {%- endif %}
             {%- endif %}
         {%- endif %}
