--- a/platformics/codegen/templates/api/types/class_name.py.j2
+++ b/platformics/codegen/templates/api/types/class_name.py.j2
@@ -104,8 +104,13 @@ async def load_{{ related_field.related_class.snake_name }}_rows(
     relationship = mapper.relationships["{{ related_field.name }}"]
     return await dataloader.loader_for(relationship, where).load(root.id)  # type:ignore
         {%- else %}
+	   {%- if related_field.is_virtual_relationship %}
+    relationship = mapper.relationships["{{ related_field.name }}"]
+    return await dataloader.loader_for(relationship, where).load(root.id) # type:ignore
+	   {%- else %}
     relationship = mapper.relationships["{{ related_field.name }}"]
     return await dataloader.loader_for(relationship, where).load(root.{{ related_field.name }}_id) # type:ignore
+           {%- endif %}
         {%- endif %}
 
 
