--- a/platformics/codegen/templates/database/models/class_name.py.j2
+++ b/platformics/codegen/templates/database/models/class_name.py.j2
@@ -14,7 +14,7 @@ from typing import TYPE_CHECKING
 
 from platformics.database.models.base import Entity
 from sqlalchemy import ForeignKey, String, Float, Integer, Enum, Boolean, DateTime
-from sqlalchemy.dialects.postgresql import UUID
+from sqlalchemy.dialects.postgresql import UUID, JSONB
 from sqlalchemy.orm import Mapped, mapped_column, relationship
 {%- for field in cls.enum_fields %}
     {%- if loop.first %}
@@ -50,6 +50,8 @@ class {{cls.name}}(Entity):
     {{attr.name}}: Mapped[uuid.UUID] = mapped_column({%- if attr.inverse %}ForeignKey("{{attr.inverse}}"){%- else %}UUID{%- endif %}, nullable={{ "False" if attr.required else "True"}}, primary_key={{ "True" if attr.identifier else "False"}})
         {%- elif attr.type == "string" %}
     {{attr.name}}: Mapped[str] = mapped_column(String, nullable={{ "False" if attr.required else "True"}})
+        {%- elif attr.type == "2dArrayInt" %}
+    {{attr.name}}: Mapped[JSONB] = mapped_column(JSONB, nullable={{ "False" if attr.required else "True"}})
         {%- elif attr.type == "int" %}
     {{attr.name}}: Mapped[int] = mapped_column(Integer, nullable={{ "False" if attr.required else "True"}})
         {%- elif attr.type == "float" %}
@@ -61,8 +63,12 @@ class {{cls.name}}(Entity):
         {%- elif attr.type == "date" %}
     {{attr.name}}: Mapped[datetime.datetime] = mapped_column(DateTime, nullable={{ "False" if attr.required else "True"}})
         {%- else %}
-            {%- if attr.multivalued %}
+            {%- if attr.is_virtual_relationship %}
+                {%- if attr.multivalued %}
     {{attr.name}}: Mapped[list[{{attr.type}}]] = relationship("{{attr.type}}", back_populates="{{attr.inverse_field}}", uselist=True, foreign_keys="{{attr.type}}.{{attr.inverse_field}}_id")
+                {%- else %}
+    {{attr.name}}: Mapped[{{attr.type}}] = relationship("{{attr.type}}", back_populates="{{attr.inverse_field}}", uselist=True, foreign_keys="{{attr.type}}.{{attr.inverse_field}}_id")
+                {%- endif %}
             {%- else %}
     {{attr.name}}_id: Mapped[uuid.UUID] = mapped_column(UUID, ForeignKey("{{attr.related_class.snake_name}}.{{attr.related_class.identifier}}"), nullable={{"False" if attr.required else "True"}}{%- if attr.identifier %}, primary_key=True{%- endif %})
               {%- if attr.type != "Entity" %}
