--- a/platformics/codegen/templates/api/types/class_name.py.j2
+++ b/platformics/codegen/templates/api/types/class_name.py.j2
@@ -31,7 +31,7 @@ from cerbos.sdk.model import Principal, Resource
 from fastapi import Depends
 from platformics.api.core.errors import PlatformicsException
 from platformics.api.core.deps import get_cerbos_client, get_db_session, require_auth_principal
-from platformics.api.core.gql_to_sql import aggregator_map, EnumComparators, DatetimeComparators, IntComparators, FloatComparators, StrComparators, UUIDComparators, BoolComparators
+from platformics.api.core.gql_to_sql import aggregator_map, orderBy, EnumComparators, DatetimeComparators, IntComparators, FloatComparators, StrComparators, UUIDComparators, BoolComparators
 from platformics.api.core.strawberry_extensions import DependencyExtension
 from platformics.security.authorization import CerbosAction, get_resource_query
 from sqlalchemy import inspect
@@ -58,7 +58,7 @@ T = typing.TypeVar("T")
 if TYPE_CHECKING:
     {%- for related_field in related_fields %}
         {%- if related_field.related_class.name not in ignored_fields %}
-    from api.types.{{related_field.related_class.snake_name}} import ({{related_field.related_class.name}}WhereClause, {{related_field.related_class.name}})
+    from api.types.{{related_field.related_class.snake_name}} import ({{related_field.related_class.name}}OrderByClause, {{related_field.related_class.name}}WhereClause, {{related_field.related_class.name}})
         {%- endif %}
     {%- endfor %}
     pass
@@ -67,6 +67,7 @@ else:
         {%- if related_field.related_class.name not in ignored_fields %}
     {{related_field.related_class.name}}WhereClause = "{{related_field.related_class.name}}WhereClause"
     {{related_field.related_class.name}} = "{{related_field.related_class.name}}"
+    {{related_field.related_class.name}}OrderByClause = "{{related_field.related_class.name}}OrderByClause"
         {%- endif %}
     {%- endfor %}
     pass
@@ -89,6 +90,7 @@ async def load_{{ related_field.related_class.snake_name }}_rows(
     root: "{{ cls.name }}",
     info: Info,
     where: Annotated["{{ related_field.type }}WhereClause", strawberry.lazy("api.types.{{ related_field.related_class.snake_name }}")] | None = None,
+    order_by: Optional[list[Annotated["{{ related_field.type }}OrderByClause", strawberry.lazy("api.types.{{ related_field.related_class.snake_name }}")]]] = [],
 ) -> Sequence[Annotated["{{ related_field.type }}", strawberry.lazy("api.types.{{ related_field.related_class.snake_name }}")]]:
         {%- else %}
 @strawberry.field
@@ -96,21 +98,22 @@ async def load_{{ related_field.related_class.snake_name }}_rows(
     root: "{{ cls.name }}",
     info: Info,
     where: Annotated["{{ related_field.type }}WhereClause", strawberry.lazy("api.types.{{ related_field.related_class.snake_name }}")] | None = None,
+    order_by: Optional[list[Annotated["{{ related_field.type }}OrderByClause", strawberry.lazy("api.types.{{ related_field.related_class.snake_name }}")]]] = [],
 ) -> Optional[Annotated["{{ related_field.type }}", strawberry.lazy("api.types.{{ related_field.related_class.snake_name }}")]]:
         {%- endif %}
     dataloader = info.context["sqlalchemy_loader"]
     mapper = inspect(db.{{ cls.name }})
         {%- if related_field.multivalued %}
     relationship = mapper.relationships["{{ related_field.name }}"]
-    return await dataloader.loader_for(relationship, where).load(root.id)  # type:ignore
+    return await dataloader.loader_for(relationship, where, order_by).load(root.id)  # type:ignore
         {%- else %}
-	   {%- if related_field.is_virtual_relationship %}
+	        {%- if related_field.is_virtual_relationship %}
     relationship = mapper.relationships["{{ related_field.name }}"]
     return await dataloader.loader_for(relationship, where).load(root.id) # type:ignore
-	   {%- else %}
+	        {%- else %}
     relationship = mapper.relationships["{{ related_field.name }}"]
-    return await dataloader.loader_for(relationship, where).load(root.{{ related_field.name }}_id) # type:ignore
-           {%- endif %}
+    return await dataloader.loader_for(relationship, where, order_by).load(root.{{ related_field.name }}_id) # type:ignore
+            {%- endif %}
         {%- endif %}
 
 
@@ -204,6 +207,21 @@ class {{ cls.name }}WhereClause(TypedDict):
     {{ attr.name }}: Optional[DatetimeComparators] | None
         {%- elif attr.inverse %}
     {{ attr.name }}: Optional[Annotated["{{ attr.type }}WhereClause", strawberry.lazy("api.types.{{ attr.related_class.snake_name }}")]] | None
+        {%- endif %}
+    {%- endfor %}
+
+"""
+Supported ORDER BY clause attributes
+"""
+@strawberry.input
+class {{ cls.name }}OrderByClause(TypedDict):
+    {%- for attr in cls.all_fields %}
+        {%- if attr.type != "File" and attr.name != "entity_id" and not attr.multivalued %}
+            {%- if attr.inverse %}
+    {{ attr.name }}: Optional[Annotated["{{ attr.type }}OrderByClause", strawberry.lazy("api.types.{{ attr.related_class.snake_name }}")]] | None
+            {%- else %}
+    {{ attr.name }}: Optional[orderBy] | None
+            {%- endif %}
         {%- endif %}
     {%- endfor %}
 
@@ -390,11 +408,12 @@ async def resolve_{{ cls.plural_snake_name }}(
     cerbos_client: CerbosClient = Depends(get_cerbos_client),
     principal: Principal = Depends(require_auth_principal),
     where: Optional[{{ cls.name }}WhereClause] = None,
+    order_by: Optional[list[{{ cls.name }}OrderByClause]] = [],
 ) -> typing.Sequence[{{ cls.name }}]:
     """
     Resolve {{ cls.name }} objects. Used for queries (see api/queries.py).
     """
-    return await get_db_rows(db.{{ cls.name }}, session, cerbos_client, principal, where, [])  # type: ignore
+    return await get_db_rows(db.{{ cls.name }}, session, cerbos_client, principal, where, order_by)  # type: ignore
 
 
 def format_{{ cls.snake_name }}_aggregate_output(query_results: RowMapping) -> {{ cls.name }}AggregateFunctions:
