--- a/platformics/codegen/templates/test_infra/factories/class_name.py.j2
+++ b/platformics/codegen/templates/test_infra/factories/class_name.py.j2
@@ -77,7 +77,7 @@ class {{ cls.name }}Factory(CommonFactory):
     {{ field.name }} = factory.Faker("{{ field.factory_type }}")
                 {%- elif field.type == "string" %}
     {{ field.name }} = fuzzy.FuzzyText()
-                {%- elif field.type == "2dArrayInt" %}
+                {%- elif field.type == "Array2dInt" %}
     {{ field.name }} = factory.LazyAttribute(lambda o: [ [random.randint(0, 10) for _ in range(5)] ] * random.randint(2, 5) )
                 {%- elif field.type == "int" %}
     {{ field.name }} = fuzzy.FuzzyInteger(1, 1000)
